<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <!-- Title with count -->
    <TextView
        android:id="@+id/favorites_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_favorites"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- RecyclerView for favorite recipes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_small"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/favorites_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Empty state -->
    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_empty"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:textColor="@color/text_secondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_empty_subtitle"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/text_hint"
            android:layout_marginTop="@dimen/margin_small" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
